--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ flask==2.3.2
 flask-migrate==4.0.4
 flask-restful==0.3.10
 flask-sqlalchemy==3.0.4
+gunicorn==22.0.0
 importlib-metadata==6.7.0 ; python_version < '3.10'
 importlib-resources==5.12.0
 iniconfig==2.0.0 ; python_version >= '3.7'
