--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,8 @@ pure-eval==0.2.2
 pygments==2.15.1 ; python_version >= '3.7'
 pytest==7.3.2
 python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+psycopg2-binary==2.9.4
+python-dotenv==0.21.0
 pytz==2023.3
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==2.0.16 ; python_version >= '3.7'
